Name updated in the main text

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            I am Luther, <br>
-                            a digital designer <br>
-                            & frontend <br> 
+                            I am Athulya, <br>
+                            an Electrical and <br>
+                            & Electronic Engineer <br> 
                             developer based <br>
                             in Somewhere.
                         </h1>
