name updated in the main text

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                         <h1 class="text-huge-title">
                             I am Athulya, <br>
                             an Electrical and <br>
-                            & Electronic Engineer <br> 
-                            developer based <br>
+                            Electronic Engineer <br> 
                             in Somewhere.
                         </h1>
                     </div>
