main text updated

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             I am Athulya, <br>
                             an Electrical and <br>
                             Electronic Engineer <br> 
-                            in Somewhere.
+                            from Sri Lanka.
                         </h1>
                     </div>
 
