--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li><a href="index.html" class="home-link">Luther.</a></li>
+                        <li><a href="index.html" class="home-link">Athulya Ratnayake</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
@@ -134,11 +134,14 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                                velit esse cillum dolore eu fugiat nulla pariatur.
+                                I’m an Electrical and Electronic Engineering undergraduate 
+                                at the University of Peradeniya, where I founded and now 
+                                serve as president of the Engineering Mathematics Society.
+                                ’m also a competitive programmer, consistently ranking first 
+                                nationally and placing within the global top 100 in major 
+                                international contests. I’m passionate about applying AI, 
+                                machine learning, and signal processing to solve real-world 
+                                challenges.
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
