--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="#0">Behance</a></li>
-                        <li><a href="#0">Twitter</a></li>
-                        <li><a href="#0">Dribbble</a></li>
+                        <li><a href="#0">LinkedIn</a></li>
+                        <li><a href="#0">X</a></li>
+                        <li><a href="#0">Facebook</a></li>
                         <li><a href="#0">Instagram</a></li>
                     </ul>
 
