--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
                         <h2 class="text-pretitle" data-animate-el>Expertise</h2>
 
                         <ul class="skills-list h1" data-animate-el>
-                            <li>Visual Design</li>
-                            <li>Branding Identity</li>
-                            <li>UI Design</li>
-                            <li>Product Design</li>
-                            <li>Prototyping</li>
-                            <li>Illustration</li>
+                            <li>Machine Learning</li>
+                            <li>Signal Processing</li>
+                            <li>Mathematics</li>
+                            <li>Computer Programming</li>
+                            <li>Problem Solving</li>
+                            <li>Feature Engineering</li>
                         </ul>
 
                     </div>
@@ -217,12 +217,16 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">University of Life</h3>
-                                    <h5 class="timeline__meta">Master in Graphic Design</h5>
-                                    <p class="timeline__timeframe">April 2015</p>
+                                    <h4 class="timeline__title">University of Peradeniya</h3>
+                                    <h5 class="timeline__meta">BSc. (Eng) (Electrical and Electronic Engineering) - undergraduate</h5>
+                                    <p class="timeline__timeframe">To date</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>Electrical and Electronic Engineering is a foundation for modern innovation, 
+                                        blending hardware, software, and analytical thinking. I'm especially drawn to 
+                                        machine learning and signal processing—fields that turn raw data into intelligent 
+                                        decisions. At the core of both lies mathematics, which provides the tools and 
+                                        structure to model, analyze, and solve real-world problems.</p>
                                 </div>
                             </div>
     
