--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Luther</title>
+    <title>Athulya Ratnayake</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -233,9 +233,9 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">School of Cool Designers</h4>
+                                    <h4 class="timeline__title">Dharmaraja College, Kandy</h4>
                                     <h5 class="timeline__meta">B.A. Degree in Graphic Design</h5>
-                                    <p class="timeline__timeframe">August 2012</p>
+                                    <p class="timeline__timeframe">August 2018</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
