Primary education added

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">University of Peradeniya</h3>
-                                    <h5 class="timeline__meta">BSc. (Eng) (Electrical and Electronic Engineering) - undergraduate</h5>
+                                    <h5 class="timeline__meta">BSc. (Eng) (Electrical and Electronic Engineering) - Undergraduate</h5>
                                     <p class="timeline__timeframe">To date</p>
                                 </div>
                                 <div class="timeline__desc">
@@ -234,11 +234,14 @@
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">Dharmaraja College, Kandy</h4>
-                                    <h5 class="timeline__meta">B.A. Degree in Graphic Design</h5>
+                                    <h5 class="timeline__meta">GCE Ordinary Level and GCE Advanced Level</h5>
                                     <p class="timeline__timeframe">August 2018</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>Completed GCE Ordinary Level examination in 2015 at Dharmaraja College, Kandy, 
+                                        with A passes in all subjects. Sat for the GCE Advanced Level examination in 
+                                        2019 in the Mathematics stream at the same institution, achieving a district 
+                                        rank of 18th in Kandy and an island rank of 248th</p>
                                 </div>
                             </div>
     
