--- a/index.html
+++ b/index.html
@@ -181,24 +181,30 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Dropbox</h3>
-                                    <h5 class="timeline__meta">Product Designer</h5>
-                                    <p class="timeline__timeframe">August 2019 - Present</p>
+                                    <h4 class="timeline__title">Sri Lanka Telecom - Digital Labs</h3>
+                                    <h5 class="timeline__meta">Research and Development Engineering Intern</h5>
+                                    <p class="timeline__timeframe">July 2024 - October 2024</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>Served as a Research and Development Engineering Intern at Sri Lanka Telecom Digital 
+                                        Labs, contributing to AI-driven solutions in the telecommunications domain. Worked 
+                                        on a machine learning system to identify connected and not connected ports in fiber 
+                                        distribution points, and developed a computer vision and super-resolution–based 
+                                        approach for extracting and reading QR codes from images.</p>
                                 </div>
                             </div>
     
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Microsoft</h4>
-                                    <h5 class="timeline__meta">Frontend Developer</h5>
-                                    <p class="timeline__timeframe">August 2016 - July 2019</p>
+                                    <h4 class="timeline__title">National Institute of Fundamental Studies</h4>
+                                    <h5 class="timeline__meta">Research Intern</h5>
+                                    <p class="timeline__timeframe">July 2023 - October 2023</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>Worked as a Research Intern at the National Institute of Fundamental Studies, focusing 
+                                        on energy storage technologies. Conducted research on supercapacitors with an emphasis 
+                                        on enhancing their performance through nitrogen doping techniques.</p>
                                 </div>
                             </div>
     
