--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li><a href="index.html" class="home-link">Athulya Ratnayake</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
-                        <li><a href="#works" class="smoothscroll">Works</a></li>
+                        <li><a href="#works" class="smoothscroll">My Projects</a></li>
                         <li><a href="#contact" class="smoothscroll">Say Hello</a></li>
                     </ul>
                 </nav>
@@ -192,6 +192,21 @@
                                         approach for extracting and reading QR codes from images.</p>
                                 </div>
                             </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Department of Computer Engineering - University of Peradeniya</h3>
+                                    <h5 class="timeline__meta">Casual Instructor</h5>
+                                    <p class="timeline__timeframe">March 2024 - June 2024</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Served as a Casual Instructor in the Department of Computer Engineering, University of 
+                                        Peradeniya, for the course CO253 – Introduction to Programming and Networking for 
+                                        Electrical Engineering. Assisted students in understanding the fundamentals of 
+                                        C programming and computer networking through hands-on guidance and lab support.</p>
+                                </div>
+                            </div>
     
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
@@ -270,7 +285,7 @@
                     <div class="column lg-12" data-animate-block>
 
                         <h2 class="text-pretitle" data-animate-el>
-                            Recent Works
+                            My Projects
                         </h2>
                         <p class="h1" data-animate-el>
                             Here are some of my favorite projects I have done lately. Feel free to check them out.
@@ -605,7 +620,7 @@
                         <p class="h1">
                             I love to hear from you.
                             Whether you have a question or just 
-                            want to chat about design, tech & art — shoot me a message.
+                            want to chat about Mathematics, AI and ML, Signal Processing, Music — shoot me a message.
                         </p>
                     </div>
                 </div> <!-- end contact-top -->
@@ -614,16 +629,17 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:sayhello@luther.com" class="mailtoui">sayhello@luther.com</a> <br>
-                            <a href="tel:+1975432345">+197 543 2345</a>
+                            <a href="mailto:ratnayakeathulya@gmail.com" class="mailtoui">ratnayakeathulya@gmail.com</a> <br>
+                            <a href="tel:+94774125925">+94 77 41 25 925</a>
+                            <a href="tel:+94717273706">+94 71 72 73 706 (Whatsapp)/a>
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="#0">Behance</a></li>
-                            <li><a href="#0">Dribble</a></li>
-                            <li><a href="#0">Twitter</a></li>
+                            <li><a href="#0">LinkedIn</a></li>
+                            <li><a href="#0">Facebook</a></li>
+                            <li><a href="#0">X</a></li>
                             <li><a href="#0">Instagram</a></li>
                             <li><a href="#0">Github</a></li>
                         </ul>
@@ -640,22 +656,6 @@
 
         <!-- ## footer
         ================================================== -->
-        <footer class="s-footer">
-
-            <div class="row">
-                <div class="column ss-copyright">
-                    <span>© Copyright Luther 2021</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span>
-                </div>
-
-                <div class="ss-go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd"><path d="M11 2.206l-6.235 7.528-.765-.645 7.521-9 7.479 9-.764.646-6.236-7.53v21.884h-1v-21.883z"/></svg>
-                    </a>
-                </div>
-            </div>
-
-        </footer> <!-- end s-footer -->
 
     </div> <!-- end -s-pagewrap -->
 
