--- a/index.html
+++ b/index.html
@@ -264,6 +264,21 @@
                                         rank of 18th in Kandy and an island rank of 248th</p>
                                 </div>
                             </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">bhatkhande sangit vidyapith, Lucknow</h4>
+                                    <h5 class="timeline__meta">Visharad in Hindustani Classical Music (Instrumental - Violin) (1st division)</h5>
+                                    <p class="timeline__timeframe">2016</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Studied Hindustani classical music at Bhatkhande Sangeet Vidyapith, Lucknow, 
+                                        specializing in instrumental violin. Completed the Visharad examination with a 
+                                        First Division pass, demonstrating strong proficiency in classical performance 
+                                        and theory.</p>
+                                </div>
+                            </div>
     
                         </div> <!-- end timeline -->
                         
