--- a/index.html
+++ b/index.html
@@ -642,9 +642,9 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:ratnayakeathulya@gmail.com" class="mailtoui">ratnayakeathulya@gmail.com</a> <br>
-                            <a href="tel:+94774125925">+94 77 41 25 925</a>
-                            <a href="tel:+94717273706">+94 71 72 73 706 (Whatsapp)/a>
+                            <a href="mailto:ratnayakeathulya@gmail.com" class="mailtoui">Email</a> <br>
+                            <a href="tel:+94774125925">+94 77 41 25 925,</a>
+                            <a href="tel:+94717273706">+94 71 72 73 706 (Whatsapp)</a>
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
@@ -658,7 +658,7 @@
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
-                        <a href="mailto:sayhello@luther.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
+                        <a href="mailto:ratnayakeathulya@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
                     </div>
                 </div> <!-- end contact-bottom -->
 
