--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">bhatkhande sangit vidyapith, Lucknow</h4>
+                                    <h4 class="timeline__title">Bhatkhande Sangit Vidyapith, Lucknow</h4>
                                     <h5 class="timeline__meta">Visharad in Hindustani Classical Music (Instrumental - Violin) (1st division)</h5>
                                     <p class="timeline__timeframe">2016</p>
                                 </div>
