--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <a class="folio-list__item-link" href="#modal-01">
                                     <div class="folio-list__item-pic">
                                         <img src="images/portfolio/fuji.jpg"
-                                             srcset="images/portfolio/fuji.jpg 1x, images/portfolio/fuji@2x.jpg 2x"  alt="">
+                                             srcset="images/portfolio/change-detection.jpg"  alt="">
                                     </div>
                                     
                                     <div class="folio-list__item-text">
@@ -319,7 +319,7 @@
                                             Website
                                         </div>
                                         <div class="folio-list__item-title">
-                                            Retro Camera.
+                                            Remote Sensing - Change Detection.
                                         </div>
                                     </div>
                                 </a>
