--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
                 <div class="row works-portfolio">
 
-                    
+
                     <div class="column lg-12" data-animate-block>
 
                         <h2 class="text-pretitle" data-animate-el>
@@ -317,7 +317,7 @@
                                     
                                     <div class="folio-list__item-text">
                                         <div class="folio-list__item-cat">
-                                            Website
+                                            Computer Vision + Machine Learning
                                         </div>
                                         <div class="folio-list__item-title">
                                             Remote Sensing - Change Detection.
