--- a/index.html
+++ b/index.html
@@ -446,8 +446,10 @@
                             <img src="images/portfolio/gallery/g-fuji.jpg" alt="">
                 
                             <div class="modal-popup__desc">
-                                <h5>Retro Camera</h5>
-                                <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                                <h5>Remote Sensing - Change Detection</h5>
+                                <p>Remote sensing semantic change detection involves identifying and classifying 
+                                    meaningful changes in land use or surface features over time using satellite 
+                                    or aerial imagery.</p>
                                 <ul class="modal-popup__cat">
                                     <li>Branding</li>
                                     <li>Product Design</li>
