--- a/index.html
+++ b/index.html
@@ -464,8 +464,10 @@
                             <img src="images/portfolio/gallery/g-lamp.jpg" alt="">
                 
                             <div class="modal-popup__desc">
-                                <h5>The White Lamp</h5>
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                <h5>Hyperspectral Unmixing</h5>
+                                <p>Hyperspectral unmixing is the process of decomposing mixed pixels in hyperspectral 
+                                    images into their constituent materials, known as endmembers, and estimating their 
+                                    corresponding abundances within each pixel.</p>
                                 <ul class="modal-popup__cat">
                                     <li>Branding</li>
                                 </ul>
