--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
                             <li><a href="#0">LinkedIn</a></li>
-                            <li><a href="#0">Facebook</a></li>
+                            <li><a href="https://www.facebook.com/athulya.rathnayake99">Facebook</a></li>
                             <li><a href="#0">X</a></li>
                             <li><a href="#0">Instagram</a></li>
                             <li><a href="#0">Github</a></li>
