--- a/index.html
+++ b/index.html
@@ -663,11 +663,11 @@
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="#0">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/athulya-ratnayake/">LinkedIn</a></li>
                             <li><a href="https://www.facebook.com/athulya.rathnayake99">Facebook</a></li>
                             <li><a href="#0">X</a></li>
                             <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Github</a></li>
+                            <li><a href="https://github.com/athulya24453">Github</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
