social media opens in new tabs

--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                         <ul class="contact-social">
                             <li><a href="https://www.linkedin.com/in/athulya-ratnayake/">LinkedIn</a></li>
                             <li><a href="https://www.facebook.com/athulya.rathnayake99">Facebook</a></li>
-                            <li><a href="#0">X</a></li>
+                            <li><a href="#0" target="_blank" rel="noopener noreferrer">X</a></li>
                             <li><a href="#0">Instagram</a></li>
                             <li><a href="https://github.com/athulya24453">Github</a></li>
                         </ul>
