social media opens in new tabs FB and linkedIn

--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="https://www.linkedin.com/in/athulya-ratnayake/">LinkedIn</a></li>
-                            <li><a href="https://www.facebook.com/athulya.rathnayake99">Facebook</a></li>
+                            <li><a href="https://www.linkedin.com/in/athulya-ratnayake/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                            <li><a href="https://www.facebook.com/athulya.rathnayake99" target="_blank" rel="noopener noreferrer">Facebook</a></li>
                             <li><a href="#0" target="_blank" rel="noopener noreferrer">X</a></li>
                             <li><a href="#0">Instagram</a></li>
                             <li><a href="https://github.com/athulya24453">Github</a></li>
