social media opens in new tabs github

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                             <li><a href="https://www.facebook.com/athulya.rathnayake99" target="_blank" rel="noopener noreferrer">Facebook</a></li>
                             <li><a href="#0" target="_blank" rel="noopener noreferrer">X</a></li>
                             <li><a href="#0">Instagram</a></li>
-                            <li><a href="https://github.com/athulya24453">Github</a></li>
+                            <li><a href="https://github.com/athulya24453" target="_blank" rel="noopener noreferrer">Github</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
