--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                                 </ul>
                             </div>
                 
-                            <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                            <a href="https://github.com/Buddhi19/SCanNet" target="_blank" rel="noopener noreferrer" class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
 
