main text changed

--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
                         <h1 class="text-huge-title">
                             I am Athulya, <br>
                             an Electrical and <br>
-                            Electronic Engineer <br> 
-                            from Sri Lanka.
+                            Electronic Engineering <br>
+                            undergraduate <br>
+                            at the University of <br>
+                            Peradeniya.
                         </h1>
                     </div>
 
