--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                             <li><a href="https://www.linkedin.com/in/athulya-ratnayake/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                             <li><a href="https://www.facebook.com/athulya.rathnayake99" target="_blank" rel="noopener noreferrer">Facebook</a></li>
                             <li><a href="#0" target="_blank" rel="noopener noreferrer">X</a></li>
-                            <li><a href="#0">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/@athulyaratnayake1081" target="_blank" rel="noopener noreferrer">YouTube</a></li>
                             <li><a href="https://github.com/athulya24453" target="_blank" rel="noopener noreferrer">Github</a></li>
                         </ul>
                     </div>
