Smart calculator image format corrected

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <a class="folio-list__item-link" href="#modal-04">
                                     <div class="folio-list__item-pic">
                                         <img src="images/portfolio/skaterboy.jpg"
-                                             srcset="images/portfolio/smart-cal.jpg" alt="">
+                                             srcset="images/portfolio/smart-cal.png" alt="">
                                     </div>
                                     
                                     <div class="folio-list__item-text">
