Work experience updates

--- a/index.html
+++ b/index.html
@@ -182,16 +182,18 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Sri Lanka Telecom - Digital Labs</h3>
-                                    <h5 class="timeline__meta">Research and Development Engineering Intern</h5>
-                                    <p class="timeline__timeframe">July 2024 - October 2024</p>
+                                    <h4 class="timeline__title">Multidisciplinary AI Research Center (MARC)</h3>
+                                    <h5 class="timeline__meta">Research Assistant</h5>
+                                    <p class="timeline__timeframe">August 2025 - Present</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Served as a Research and Development Engineering Intern at Sri Lanka Telecom Digital 
-                                        Labs, contributing to AI-driven solutions in the telecommunications domain. Worked 
-                                        on a machine learning system to identify connected and not connected ports in fiber 
-                                        distribution points, and developed a computer vision and super-resolution–based 
-                                        approach for extracting and reading QR codes from images.</p>
+                                    <p>Working as a Research Assistant in the field of AI for Social Sciences and Policies, 
+                                        focusing on the application of artificial intelligence to agent-based modeling, 
+                                        human–animal behavior modeling, and demographic analysis. My responsibilities 
+                                        include conducting research on demographic analysis, focusing on interpreting global 
+                                        mortality patterns across different causes, and on image denoising using Implicit 
+                                        Neural Representations.
+                                    </p>
                                 </div>
                             </div>
 
