--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
 
                         <h1 class="text-huge-title">
                             I am Athulya, <br>
-                            an Electrical and <br>
+                            a Research Assistant <br>
                             Electronic Engineering <br>
-                            undergraduate <br>
-                            at the University of <br>
+                            at the Multidisciplinary <br>
+                            AI Research Center of <br>
+                             the University of <br>
                             Peradeniya.
                         </h1>
                     </div>
@@ -365,7 +366,7 @@
                                             Data Analysis
                                         </div>
                                         <div class="folio-list__item-title">
-                                            Population Pyramid
+                                            Demographic Analysis
                                         </div>
                                     </div>
                                 </a>
